Removed Uncessary Cells

--- a/Rag_chatbot.ipynb
+++ b/Rag_chatbot.ipynb
@@ -3,44 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c865270-cda7-468a-ad25-5ed86b096725",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Code developed by Sai Vikram Kolasani\n",
-    "#NOTE: This notebook has been tested in the following environment:\n",
-    "\n",
-    "Python version = 3.10.13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "6817ff07-7928-482e-acf4-c20324ce2374",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/bin/python\n"
-     ]
-    }
-   ],
-   "source": [
-    "Overview\n",
-    "This is a  Jupyter notebook aimed at building a conversational AI chatbot, named \"Hotel Ragbot\" designed to assist users with inquiries related to hotel bookings.\n",
-    "\n",
-    "who should be interested in it, and what you need to know before you get started.}\n",
-    "\n",
-    "Learn more about web-doc-title. {TODO: if more than one primary feature, add tag/linkback for each one}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4b2f1c0b-e6d2-4b7f-a5ce-a349b4979030",
    "metadata": {},
    "outputs": [],
@@ -100,10 +62,7 @@
     "# Initialize Faker to generate fake data\n",
     "faker = Faker()\n",
     "\n",
-    "# Define cities\n",
     "cities = [\"Miami\", \"Seattle\", \"Chicago\", \"Edison\", \"Portland\", \"Houston\", \"Phoenix\", \"Dallas\", \"Austin\", \"Atlanta\"]\n",
-    "\n",
-    "# Number of rows in the dataset\n",
     "num_rows = 1000\n",
     "\n",
     "# Generate synthetic data for each field\n",
@@ -130,7 +89,6 @@
     "\n",
     "    hotel_descriptions.append(description)\n",
     "\n",
-    "# Create DataFrame from the generated data\n",
     "data = {\n",
     "    'hotel_id': hotel_id,\n",
     "    'hotel_name': hotel_name,\n",
@@ -145,7 +103,6 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Print the first few rows of the DataFrame\n",
     "print(df.head())\n"
    ]
   },
@@ -215,10 +172,9 @@
     }
    ],
    "source": [
-    "# Rollback the failed transaction\n",
+    "# Rollback failed transaction\n",
     "conn.rollback()\n",
     "\n",
-    "# Now you can execute queries again\n",
     "cursor.execute(\"SELECT * FROM hotels LIMIT 5;\")\n",
     "result = cursor.fetchall()\n",
     "print(result)\n"
@@ -243,9 +199,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Assuming that 'df' is your DataFrame and it has a column named 'amenities'\n",
-    "\n",
-    "# Define a mapping of amenities abbreviations to their full names\n",
     "amenities_mapping = {\n",
     "    \"G\": \"Gym\",\n",
     "    \"S\": \"Spa\",\n",
@@ -259,13 +212,10 @@
     "\n",
     "chunked = []\n",
     "for index, row in df.iterrows():\n",
-    "    # Use the amenities list directly\n",
     "    amenities_list = row['amenities']\n",
     "\n",
-    "    # Map the amenities abbreviations to their full names\n",
     "    amenities_mapped = [amenities_mapping.get(amenity, amenity) for amenity in amenities_list]\n",
     "\n",
-    "    # Remove duplicates and join the amenities with commas\n",
     "    amenities_formatted = ', '.join(list(set(amenities_mapped)))\n",
     "    amenities = f\"{{{amenities_formatted}}}\"\n",
     "\n",
@@ -386,7 +336,6 @@
     }
    ],
    "source": [
-    "# This code snippet may run for longer to generate embeddings for 1000 records.\n",
     "\n",
     "from langchain.embeddings import VertexAIEmbeddings\n",
     "from google.cloud import aiplatform\n",
@@ -434,7 +383,7 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = 1000  # Adjust batch size as needed\n",
+    "batch_size = 1000  \n",
     "\n",
     "cursor.execute(\"CREATE EXTENSION IF NOT EXISTS vector;\")\n",
     "cursor.execute(\"DROP TABLE IF EXISTS htlembeddings\")\n",
@@ -459,34 +408,9 @@
     "else:\n",
     "    conn.commit()  # Commit any remaining data\n",
     "\n",
-    "# Close cursor and connection\n",
     "cursor.close()\n",
     "conn.commit\n",
     "conn.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "dce15dfd-3af6-4248-8687-edaab3947b54",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# It seems like you've provided a code snippet related to a conversational AI system using the Langchain library and a language model from Vertex AI (Gemini-Pro). The code includes various imports, prompt definitions, and chain configurations to handle user queries and generate appropriate responses.\n",
-    "\n",
-    "# The main components in this code are:\n",
-    "\n",
-    "# Importing necessary libraries and modules.\n",
-    "# Setting up the language model (Gemini-Pro from Vertex AI).\n",
-    "# Defining a prompt template (CONDENSE_QUESTION_PROMPT) to rephrase follow-up questions based on the conversation history.\n",
-    "# Defining a template for the chatbot (Priceline Penny) that provides instructions and context for generating responses.\n",
-    "# Configuring the language model chain (llm_chain) with the chatbot template and the language model.\n",
-    "# Setting up a chain (StuffDocumentsChain) to process input documents and generate responses using the language model chain.\n",
-    "# Configuring a chain (condense_question_chain) to generate condensed questions using the language model and the CONDENSE_QUESTION_PROMPT.\n",
-    "# Defining a function (format_history) to format the chat history for display purposes.\n",
-    "# Setting up a ConversationalRetrievalChain that combines document retrieval, question generation, and response generation for handling user queries.\n"
    ]
   },
   {
@@ -676,17 +600,16 @@
    "outputs": [],
    "source": [
     "def format_history(chat_history):\n",
-    "  all = \"\"\n",
+    "    all = \"\"\n",
     "\n",
-    "  for dialogue_turn in chat_history:\n",
-    "    if dialogue_turn.type == \"human\":\n",
-    "      prefix = \"Human\"\n",
-    "    else:\n",
-    "      prefix = \"Assistant (you)\"\n",
-    "    all += prefix + \": '\" + dialogue_turn.content + \"'\\n\"\n",
-    "  return all\n",
-    "\n",
-    "\n"
+    "    for dialogue_turn in chat_history:\n",
+    "        if dialogue_turn.type == \"human\":\n",
+    "            prefix = \"Human\"\n",
+    "        else:\n",
+    "            prefix = \"Assistant (you)\"\n",
+    "        all += prefix + \": '\" + dialogue_turn.content + \"'\\n\"\n",
+    "  \n",
+    "    return all\n"
    ]
   },
   {
@@ -747,31 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23e113bb-a7b7-420f-b263-1e69dbed6cd1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#questions = [\"I need to do an hotel reservation in atlantic city\", \"ok, any restaurant nearby?\", \"ok thanks. Can you tell me how to cancel a reservation ? \"]\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# for q in questions:\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#     print(\"\\nYou: \", q)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#     answer = conversation.invoke({\"question\": q})\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#     print(\"Penny: \", answer[\"answer\"])\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m---> 11\u001b[0m   q \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mYou: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m   answer \u001b[38;5;241m=\u001b[39m conversation\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m: q})\n\u001b[1;32m     13\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTravelbot: \u001b[39m\u001b[38;5;124m\"\u001b[39m, answer[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manswer\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/ipykernel/kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1283\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1284\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1285\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1287\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/ipykernel/kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#questions = [\"I need to do an hotel reservation in atlantic city\", \"ok, any restaurant nearby?\", \"ok thanks. Can you tell me how to cancel a reservation ? \"]\n",
     "# for q in questions:\n",
     "#     print(\"\\nYou: \", q)\n",
     "#     answer = conversation.invoke({\"question\": q})\n",
     "#     print(\"Penny: \", answer[\"answer\"])\n",
-    "\n",
     "\n",
     "\n",
     "\n",
